--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,6 @@
   <version>0.0.2-SNAPSHOT</version>
   <name>neuralsim Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <repositories>
-     <repository>
-      <id>stuarts-maven-repo</id>
-      <name>Stuart's Repo</name>
-      <url>https://stuarts-maven-repo.appspot.com</url>
-    </repository>
-  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -56,7 +49,7 @@
 	  <artifactId>neural</artifactId>
 	  <version>0.0.1</version>
   	</dependency>
-  </dependencies>
+</dependencies>
   <properties>
   		<app.id>neuralsim</app.id>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -70,6 +63,11 @@
   <build>
     <finalName>neuralsim</finalName>
 	<plugins>
+		<plugin>
+		   <groupId>com.google.appengine</groupId>
+		   <artifactId>appengine-maven-plugin</artifactId>
+		   <version>1.9.63</version>
+		</plugin>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-war-plugin</artifactId>
