--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
   	</dependency>
 </dependencies>
   <properties>
-  		<app.id>neuralsim</app.id>
+  		<app.id>Neuralsim</app.id>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jackson.version>2.7.4</jackson.version>
 		<spring.version>4.3.14.RELEASE</spring.version>
@@ -61,7 +61,7 @@
 		<maven-war-plugin.version>2.6</maven-war-plugin.version>
   </properties>
   <build>
-    <finalName>neuralsim</finalName>
+    <finalName>Neuralsim</finalName>
 	<plugins>
 		<plugin>
 		   <groupId>com.google.appengine</groupId>
