Setting project name back to lower case

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
     <finalName>neuralsim</finalName>
 	<plugins>
 		<plugin>
+		   <groupId>com.google.appengine</groupId>
+		   <artifactId>appengine-maven-plugin</artifactId>
+		   <version>1.9.63</version>
+		</plugin>
+		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-war-plugin</artifactId>
 			<version>${maven-war-plugin.version}</version>
